working on cache cahnges